<resources>
    <string name="app_name">QA Audit Center</string>
    <string name="employeeName">Employee Name/ID</string>
    <string name="partNumber">Part Number</string>
    <string name="generatePdf">Generate PDF</string>
    <string name="gallery">Gallery</string>
    <string name="load_image">Load Image</string>
    <string name="header">Technical Operations Quality Assurance: Update In-Process Sheet</string>
    <string name="dashboard">Dashboard</string>
    <string name="create_a_new_audit">Start a New Audit</string>
    <string name="faa_updates">FAA Updates</string>
    <string name="welcome">Welcome.</string>
    <string name="web_scraping_logo">web scraping logo</string>
    <string name="new_audit_sheet_logo">new audit sheet logo</string>
    <string name="title_activity_in_process">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="serialNumber">Serial Number</string>
    <string name="nomenclature">Nomenclature</string>
    <string name="task">Task</string>
    <string name="include_custName">Include Customer Name</string>
    <string name="tech_specs">Technical Specifications</string>
    <string name="include_tech_specs">Record type of spec, revision date and revision level per box</string>
    <string name="include_tooling_specs">Record ID and due date, if any, per box</string>
    <string name="tooling">Tooling</string>
    <string name="shelf_life">Shelf Life</string>
    <string name="shelf_life_specs">Record Item and due date, if any, per box</string>
    <string name="trace">Traceability</string>
    <string name="trace_specs">Outside of Stores</string>
    <string name="req_training">Required Training</string>
    <string name="date_qual">Date Qualified</string>
    <string name="tech_data_table_title">TECHNICAL DATA</string>
    <string name="tech_data_table_h1">Part Number/\nAircraft/Eng\nEffectively Num.</string>
    <string name="tech_data_table_h2">Manufacturer</string>
    <string name="tech_data_table_h3">ATA/Document ID</string>
    <string name="tech_data_table_h4">Rev.\nLevel</string>
    <string name="tech_data_table_h5">Rev.\nDate</string>
    <string name="tech_data_table_h6">Comments</string>
    <string name="ROM_data_table_title">RECORDS of MAINTENANCE (ROM)</string>
    <string name="ROM_data_table_h1">Doc\nType</string>
    <string name="ROM_data_table_h2">Document #</string>
    <string name="ROM_data_table_h3">Part/PN/SN</string>
    <string name="ROM_data_table_h4">Date</string>
    <string name="ROM_data_table_h5">Specification incl.\nrevision level &amp; date</string>
    <string name="ROM_data_table_h6">Tech. Name</string>
    <string name="calibration_data_table_title">CALIBRATION</string>
    <string name="calibration_data_table_h1">Item</string>
    <string name="calibration_data_table_h2">ID #</string>
    <string name="calibration_data_table_h3">CAL Date</string>
    <string name="calibration_data_table_h4">CAL Due</string>
    <string name="calibration_data_table_h5">CAL by</string>
    <string name="training_data_table_title">TRAINING (Non-Interviewed Personnel)</string>
    <string name="training_data_table_h1">Technician\nName/ID</string>
    <string name="training_data_table_h2">Part Number/\nMaintenance Performed</string>
    <string name="training_data_table_h3">Required Training</string>
    <string name="training_data_table_h4">OJT/Qualified\nDate</string>
    <string name="traceability_data_table_title">TRACEABILITY</string>
    <string name="traceability_data_table_h1">Product</string>
    <string name="traceability_data_table_h2">Part Number</string>
    <string name="traceability_data_table_h3">Batch/Lot #</string>
    <string name="traceability_data_table_h4">P.O. Number</string>
    <string name="traceability_data_table_h5">Supplier</string>
    <string name="update_existing_audit">Update</string>
    <string name="publication_ndate">Publication\nDate</string>
    <string name="ad_number">AD Number</string>
    <string name="effective_ndate">Effective\nDate</string>
    <string name="FAA_title">Title</string>
    <string name="go_to_data_tables">Switch To Data Tables</string>
    <string name="upload_image">Upload Image</string>
    <string name="take_photo">Take Photo</string>
    <string name="save">Save</string>
    <string name="save_amp_generate_pdf"><![CDATA[Save & Generate PDF]]></string>
    <string name="generate_pdf">Generate PDF</string>
    <string name="clear_all_data">Clear All Data</string>
    <string name="view_in_process_sheets">View In Process Sheets</string>
    <string name="switch_to_inprocess_btn">Switch to In-Process Sheets</string>
    <string name="edit_pending_audit">Edit Pending Audit</string>
    <string name="untitled_audit_hint">Untitled Audit</string>
    <string name="create_another_in_process_sheet">Create Another In-Process Sheet</string>
    <string name="create_header">Technical Operations Quality Assurance: Create an In-Process Sheet</string>
    <string name="get_regulations">Get Regulations</string>
    <string name="select_a_checklist">Select a Checklist</string>
    <string name="new_audit">New Audit</string>
    <string name="audit_info">Audit Info</string>
    <string name="checklist">Checklist</string>
    <string name="in_process">In-Process</string>
    <string name="table_data">Table Data</string>
    <string name="title">Quality Assurance Technical Operations</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_checklist_name">Default_Checklist_Name</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="auditor_name">Auditor Name</string>
    <string name="date">Date</string>
    <string name="vendor_name">Vendor Name</string>
    <string name="vendor_number">Vendor Number</string>
    <string name="description">Description</string>
    <string name="save_audit_information">Save Audit Information</string>
    <string name="main_menu">Main Menu</string>
    <string name="current_in_process_sheets">Current In-Process Sheets</string>
    <string name="delete">Delete</string>
    <string name="technical_operations_quality_assurance">Technical Operations Quality Assurance</string>
    <string name="current_technical_data">Current Technical Data</string>
    <string name="add_row">Add Row</string>
    <string name="technical_data">Technical Data</string>
    <string name="rom">ROM</string>
    <string name="calibration">Calibration</string>
    <string name="training">Training</string>
    <string name="traceability">Traceability</string>
    <string name="audit_title">Audit Title</string>
    <string name="audit_number">Audit Number</string>
    <string name="location">Location</string>
    <string name="audit_status">Audit Status</string>
    <string name="audit_status_open">Audit Status: Open</string>
    <string name="audit_status_closed">Audit Status: Closed</string>
    <string name="edit_or_view_audit">Edit or View Audit</string>
    <string name="select_name">Search by Auditor Name</string>
    <string name="save_audit_specs">Save Audit Specs</string>
    <string name="add_in_process">Add In-Process</string>
    <string name="no_answer">N/A</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="default_question">Default Question</string>
    <string name="n_a">N/A</string>
    <string name="comment">Comment</string>
    <string name="quality_assurance_technical_operations_audit">Quality Assurance Technical Operations Audit</string>
    <string name="return_to_dashboard">Return to Dashboard</string>
    <string name="return_button">Return</string>
    <string name="delete_image">Delete Image</string>
</resources>