<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="fill"
            android:padding="10dp"
            android:scrollbarAlwaysDrawVerticalTrack="true">

            <TextView
                android:id="@+id/textView_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_weight="5"
                android:gravity="fill"
                android:text="@string/default_question"
                android:textSize="18sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkBox_yes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/yes" />

            <CheckBox
                android:id="@+id/checkBox_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/no" />

            <CheckBox
                android:id="@+id/checkBox_na"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/n_a" />

            <EditText
                android:id="@+id/editText_Comment"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:autofillHints=""
                android:ems="10"
                android:gravity="clip_horizontal|center|center_horizontal"
                android:hint="@string/comment"
                android:inputType="textImeMultiLine" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>