<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/UnitedBlue"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:subtitleTextColor="#F6F5F5"
        app:title="Quality Assurance Technical Operations Audit"
        app:titleTextColor="#FFFFFF" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/auditTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/auditSpecsTabItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/audit_info" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/checklistTabItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checklist" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/inProcessTabItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in_process" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tableDataTabItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table_data" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>