<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/employeeName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center|center_horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/employeeName"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/partNumber"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/employeeName"
        android:layout_alignStart="@id/employeeName"
        android:layout_alignEnd="@id/employeeName"
        android:layout_marginTop="20dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/partNumber"
        android:textAlignment="center"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_editor_absoluteY="311dp" />

    <Button
        android:id="@+id/generatePdf"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/partNumber"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/generatePdf" />

    <!--        tools:layout_editor_absoluteX="171dp"-->
    <!--        tools:layout_editor_absoluteY="385dp"-->

</RelativeLayout>